--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-
-  /* border: 1px solid red; */
 }
 
 :root {
@@ -35,10 +33,6 @@ body {
   align-items: center;
   overflow: hidden;
   transition: width 0.5s, left 0.5s;
-}
-
-.navigation.active {
-  width: 0;
 }
 
 .navigation ul {
@@ -85,10 +79,6 @@ body {
   transition: width 0.5s, left 0.5s;
 }
 
-.main.active {
-  width: calc(100% - 0px);
-  left: 0px;
-}
 .main .topbar {
   position: fixed;
   top: 0;
@@ -103,11 +93,6 @@ body {
   align-items: center;
   z-index: 10000;
   transition: width 0.5s, left 0.5s;
-}
-
-.main .topbar.active {
-  width: calc(100% - 0px);
-  left: 0px;
 }
 
 .main .topbar .logo {
@@ -146,6 +131,9 @@ h3 {
 
 p {
   color: #676767;
+}
+img {
+  width: 60vw;
 }
 
 .adjust {
@@ -268,11 +256,6 @@ p {
   margin-top: 10px;
 }
 
-.controller img {
-  max-width: 550px;
-  margin-top: 20px;
-}
-
 .controller ul li {
   font-size: 16px;
   color: #666;
@@ -367,21 +350,15 @@ p {
 
 /* responsive */
 
-@media (max-width: 992px) {
+@media screen and (max-width: 992px) {
   .navigation {
-    left: -100%;
-  }
-  .navigation.active {
-    left: 0;
-    width: 100%;
+    display: none;
   }
   .main {
     left: 0;
     width: 100%;
   }
-  .main.active {
-    left: 100%;
-  }
+
   .main .topbar {
     left: 0;
     width: 100%;
@@ -404,7 +381,7 @@ p {
   }
 }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .contact .contactForm .row {
     grid-template-columns: repeat(1, 1fr);
   }
